# MM_SudokuSolver

./: .depend  README.md
cmake/: CMakeLists.txt  Notes.txt  build_gcc.sh  build_vs_2017.bat  build_vs_2022.bat
doc/: Cache Size.xlsx  TODO.txt
src/: MM_SudokuSolver_main.cpp  _MM_SudokuSolver_main.cpp
src/Assert/: MyAssert.cpp  MyAssert.h
src/Logger/: Logger.cpp  Logger.h  Logger_UnitTest.cpp
src/Puzzles_Sudoku/: Puzzles_Sudoku_BigInteger.cpp  Puzzles_Sudoku_BigInteger.h  Puzzles_Sudoku_Generator.cpp  Puzzles_Sudoku_Generator.h  Puzzles_Sudoku_GlobalLookupTables.cpp  Puzzles_Sudoku_GlobalLookupTables.h  Puzzles_Sudoku_GlobalLookupTablesGeneric_14.cpp  Puzzles_Sudoku_GlobalLookupTablesGeneric_14.h  Puzzles_Sudoku_GlobalLookupTablesGeneric_3.cpp  Puzzles_Sudoku_GlobalLookupTablesGeneric_3.h  Puzzles_Sudoku_GlobalLookupTablesTemplate.cpp  Puzzles_Sudoku_GlobalLookupTablesTemplate.h  Puzzles_Sudoku_GlobalLookupTablesTemplate_14.cpp  Puzzles_Sudoku_GlobalLookupTablesTemplate_14.h  Puzzles_Sudoku_GlobalLookupTablesTemplate_3.cpp  Puzzles_Sudoku_GlobalLookupTablesTemplate_3.h  Puzzles_Sudoku_Solver.cpp  Puzzles_Sudoku_Solver.h  Puzzles_Sudoku_SolverUsingBruteForce_0.cpp  Puzzles_Sudoku_SolverUsingBruteForce_0.h  Puzzles_Sudoku_SolverUsingBruteForce_10.cpp  Puzzles_Sudoku_SolverUsingBruteForce_10.h  Puzzles_Sudoku_SolverUsingBruteForce_11.cpp  Puzzles_Sudoku_SolverUsingBruteForce_11.h  Puzzles_Sudoku_SolverUsingBruteForce_12.cpp  Puzzles_Sudoku_SolverUsingBruteForce_12.h  Puzzles_Sudoku_SolverUsingBruteForce_13.cpp  Puzzles_Sudoku_SolverUsingBruteForce_13.h  Puzzles_Sudoku_SolverUsingBruteForce_14.cpp  Puzzles_Sudoku_SolverUsingBruteForce_14.h  Puzzles_Sudoku_SolverUsingBruteForce_2.cpp  Puzzles_Sudoku_SolverUsingBruteForce_2.h  Puzzles_Sudoku_SolverUsingBruteForce_3.cpp  Puzzles_Sudoku_SolverUsingBruteForce_3.h  Puzzles_Sudoku_SolverUsingBruteForce_4.cpp  Puzzles_Sudoku_SolverUsingBruteForce_4.h  Puzzles_Sudoku_SolverUsingBruteForce_5.cpp  Puzzles_Sudoku_SolverUsingBruteForce_5.h  Puzzles_Sudoku_SolverUsingBruteForce_6.cpp  Puzzles_Sudoku_SolverUsingBruteForce_6.h  (+44 more)
src/Timer/: MSDNTimeExample.cpp  MSDNTimeExample.h  Timer.cpp  Timer.h  Timer2.cpp  Timer2.h  Timer_UnitTest.cpp
test/reports/Sudoku/: universalSudokuPuzzleDataLibrary.csv  (+1 more)
(+3 files in other folders)
